Change NodeName of rightColumn to not use CamelCase, as Neos changed this in 1.2.5

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -17,7 +17,7 @@
           label: 'Chronik'
           position: 30
   childNodes:
-    rightColumn:
+    rightcolumn:
       type: 'TYPO3.Neos:ContentCollection'
       constraints:
         nodeTypes:
