make FrontpageNewsList its own content element

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -231,7 +231,7 @@
   ui:
     label: 'News Liste'
     icon: 'icon-list'
-    group: 'hidden'
+    group: 'frontpage'
 
 'GSL.DuttweilerDe.Content:FrontpageNewsItem':
   superTypes: ['TYPO3.Neos:Content']
