--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -352,6 +352,7 @@
   ui:
     label: 'Veranstaltung'
     group: 'duttweiler-general'
+    icon: 'icon-calendar'
     inspector:
       groups:
         general:
@@ -403,6 +404,25 @@
         label: 'Auf Startseite zeigen?'
         inspector:
           group: 'frontpage'
+
+'GSL.DuttweilerDe.Content:EventPromoter':
+  superTypes: ['TYPO3.Neos:Content']
+  ui:
+    label: 'Veranstaltungstipp'
+    group: 'frontpage'
+    icon: 'icon-calendar'
+    inspector:
+      groups:
+        general:
+          label: 'Allgemein'
+  properties:
+    eventsRootNode:
+      type: 'reference'
+      ui:
+        label: 'Veranstaltungen Wurzelseite'
+        reloadIfChanged: TRUE
+        inspector:
+          group: 'general'
 
 
 #############################################
