Add Limit property to EventPromoter

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -435,6 +435,16 @@
         reloadIfChanged: TRUE
         inspector:
           group: 'general'
+    limit:
+      type: string
+      defaultValue: '1'
+      ui:
+        label: 'Limit'
+        reloadIfChanged: TRUE
+        inspector:
+          group: 'general'
+      validation:
+        'TYPO3.Neos/Validation/IntegerValidator':
 
 
 #############################################
