Disable autoparagraph for TextMixin Nodes

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -498,3 +498,17 @@
           group: 'events'
           editorOptions:
             nodeTypes: ['GSL.DuttweilerDe.Pages:Default']
+
+
+###################################################
+#
+# Overrides
+#
+###################################################
+
+'TYPO3.Neos.NodeTypes:TextMixin':
+  properties:
+    text:
+      ui:
+        aloha:
+          autoparagraph: FALSE
