Change FrontpageInfoBox property 'headline' to 'title' b/c the backend navigator is looking for it

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -313,7 +313,7 @@
           label: 'Allgemein'
           position: 2
   properties:
-    headline:
+    title:
       type: 'string'
       defaultValue: 'Überschrift'
       ui:
