--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "type": "typo3-flow-site",
     "description": "Neos Site Package for duttweiler.de (c) www.jan-sl.de",
     "require": {
-        "typo3/neos": "*",
-        "typo3/neos-nodetypes": "*"
+        "typo3/neos-base-distribution": "1.2.*"
     },
     "autoload": {
         "psr-0": {
