Revert "Update composer.json"
Restore original composer.json
This reverts commit 97279d071996878ee803448c51237ad700a69aac.

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "typo3-flow-site",
     "description": "Neos Site Package for duttweiler.de (c) www.jan-sl.de",
     "require": {
-        "typo3/neos-base-distribution": "1.2.*"
+        "typo3/neos": "*",
+        "typo3/neos-nodetypes": "*"
     },
     "autoload": {
         "psr-0": {
